@@ -1,9 +1,7 @@
-# package
-
 try: # pragma: no cover (pyramid 1.0.X)
-    # "pyramid.paster_templates" doesn't exist past 1.0.X
-    from pyramid.paster_templates import PyramidTemplate
-    from pyramid.paster_templates import paste_script_template_renderer
+    # "pyramid.paster.paste_script_template_renderer" doesn't exist past 1.0.X
+    from pyramid.paster import paste_script_template_renderer
+    from pyramid.paster import PyramidTemplate
 except ImportError: # pragma: no cover
     try: # pragma: no cover (pyramid 1.1.X, 1.2.X)
         # trying to import "paste_script_template_renderer" fails on 1.3.X
