@@ -1,3 +1,8 @@
+Next release
+============
+
+- Prevent import warning when installed on Pyramid 1.2.
+
 0.2 (2011-12-14)
 ================
 
